# Qt_IDE_base

./: .gitignore  CMakeLists.txt  README.md
cmake/: QtCreatorAPI.cmake  QtCreatorAPIInternal.cmake  QtCreatorIDEBranding.cmake
scripts/: install.ps1
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/libs/: CMakeLists.txt
src/libs/advanceddockingsystem/: CMakeLists.txt  DockOverlay.cpp
src/libs/aggregation/: CMakeLists.txt
src/libs/extensionsystem/: CMakeLists.txt
src/libs/utils/: CMakeLists.txt  aspects.cpp  qtcprocess.cpp
src/plugins/: CMakeLists.txt
src/plugins/testplugin/: CMakeLists.txt
